Devops/tf/jenkins/security.tf
resource "aws_security_group" "jenkins_sg" {
  name   = "jenkins-ec2-sg"
  vpc_id = local.vpc_id

  # SSH - תמיד tight
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = local.ssh_cidrs
  }

  ingress {
    description = "Jenkins UI"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = local.jenkins_cidrs
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
